mise à jour- exercice1

--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
         </div>
 
         <div class="div row">
-            <div class="col-4 offset">
-
-            </div>
-            <div class="col-8 ">
+            <div class="col-8 offset-4">
                 <div class="yellow"></div>
             </div>
         </div>
@@ -80,13 +77,12 @@
 
         <div class="row">
             <div class="col-3">
+                <div class="red"></div> 
+            </div>
+            <div class="col-3 offset-6">
                 <div class="red"></div>
-            </div>    
-            <div class="col-6 offset">  
-            </div> 
-            <div class="col-3">
-                <div class="red"></div>
-            </div>   
+            </div>     
+            
         </div>
     </div>
 </body>
